--- a/test-output/Test-Report-2020.11.17.19.28.49.html
+++ b/test-output/Test-Report-2020.11.17.19.28.49.html
@@ -51,7 +51,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Nov 10, 2020 08:51:45 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Nov 17, 2020 07:28:49 PM</span>
 				</a>
 			</li>
 			<li>
@@ -163,13 +163,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Logintest</span>
-						<span class='test-time'>Nov 10, 2020 08:52:24 AM</span>
+						<span class='test-time'>Nov 17, 2020 07:29:24 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Nov 10, 2020 08:52:24 AM</span>
-	<span class='label end-time'>Nov 10, 2020 08:52:24 AM</span>
+	<span class='label start-time'>Nov 17, 2020 07:29:24 PM</span>
+	<span class='label end-time'>Nov 17, 2020 07:29:24 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+9ms</span>
 </div>
 	<div class='test-steps'>
@@ -184,7 +184,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>8:52:24 AM</td>
+					<td class='timestamp'>7:29:24 PM</td>
 					<td class='step-details'><span class='label white-text green'>Logintest</span></td>
 				</tr>
 			</tbody>
@@ -239,19 +239,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Nov 10, 2020 08:51:45 AM</div>
+					<div class='panel-lead'>Nov 17, 2020 07:28:49 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Nov 10, 2020 08:52:30 AM</div>
+			 		<div class='panel-lead'>Nov 17, 2020 07:29:26 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>45,111ms</div>
+					<div class='panel-lead'>36,989ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
